--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,58 +1,15 @@
-<div class="container" ng-app="myApp">
-  <div class="wrap" ng-controller="MyCtrl">
-    <nav>
-      <ul>
-        <li><a du-smooth-scroll du-scrollspy offset="30">Home</a></li>
-        <li><a href="#section-1" du-smooth-scroll du-scrollspy offset="30">About</a></li>
-        <li><a href="#section-2" du-smooth-scroll du-scrollspy offset="30">Portfolio</a></li>
-        <li><a href="#section-3" du-smooth-scroll du-scrollspy offset="30">Contact</a></li>
-      </ul>
-    </nav>
-    <h1>Frank Ngo Portfolio </h1>
-    <br>
-    <section id="section-1">
-      <br>
-      <h2 id="section1">About</h2>
-      <p>Bacon ipsum dolor sit amet sausage tail capicola ground round hamburger ham hock. Short ribs pig andouille meatball, pastrami tri-tip fatback ham hock shank kielbasa swine. Rump pancetta jerky kielbasa doner beef ribs tongue hamburger strip steak
-        drumstick andouille shoulder shank flank. Swine drumstick meatball pig beef sausage strip steak.</p>
-      <p>Bacon ipsum dolor sit amet sausage tail capicola ground round hamburger ham hock. Short ribs pig andouille meatball, pastrami tri-tip fatback ham hock shank kielbasa swine. Rump pancetta jerky kielbasa doner beef ribs tongue hamburger strip steak
-        drumstick andouille shoulder shank flank. Swine drumstick meatball pig beef sausage strip steak.</p>
-      <p>Bacon ipsum dolor sit amet sausage tail capicola ground round hamburger ham hock. Short ribs pig andouille meatball, pastrami tri-tip fatback ham hock shank kielbasa swine. Rump pancetta jerky kielbasa doner beef ribs tongue hamburger strip steak
-        drumstick andouille shoulder shank flank. Swine drumstick meatball pig beef sausage strip steak.</p>
 
+<h1>Frank Ngo</h1>
 
-    </section>
+<ul id="nav">
+  <li><a class="active" href="#home">Home </a></li>
+  <li><a href="#news">My Work</a></li>
+  <li><a href="#contact">Services</a></li>
+  <li><a href="#about">About Me</a></li>
+  <li><a href="#about">Contact</a></li>
+  <li><a href="#about">Blog</a></li>
+</ul>
+<br><br><br>
+<hr>
 
-    <section id="section-2">
-      <h2 id="section2">Portfolio</h2>
-      <p>Bacon strip steak ground round, tongue pastrami short ribs pork chop venison turducken sausage sirloin. Flank chicken pork chop capicola turkey turducken cow pork loin biltong meatball drumstick pancetta filet mignon ground round fatback. Ham hock
-        jerky short ribs brisket. Meatloaf shoulder pork chop capicola, sirloin swine pig pork. Jerky ribeye hamburger pork loin sirloin kevin bresaola boudin chuck flank. Ham hock pork belly chicken jerky rump bresaola.</p>
-      <p>Bacon strip steak ground round, tongue pastrami short ribs pork chop venison turducken sausage sirloin. Flank chicken pork chop capicola turkey turducken cow pork loin biltong meatball drumstick pancetta filet mignon ground round fatback. Ham hock
-        jerky short ribs brisket. Meatloaf shoulder pork chop capicola, sirloin swine pig pork. Jerky ribeye hamburger pork loin sirloin kevin bresaola boudin chuck flank. Ham hock pork belly chicken jerky rump bresaola.</p>
-      <p>Bacon strip steak ground round, tongue pastrami short ribs pork chop venison turducken sausage sirloin. Flank chicken pork chop capicola turkey turducken cow pork loin biltong meatball drumstick pancetta filet mignon ground round fatback. Ham hock
-        jerky short ribs brisket. Meatloaf shoulder pork chop capicola, sirloin swine pig pork. Jerky ribeye hamburger pork loin sirloin kevin bresaola boudin chuck flank. Ham hock pork belly chicken jerky rump bresaola.</p>
-      <p>Bacon strip steak ground round, tongue pastrami short ribs pork chop venison turducken sausage sirloin. Flank chicken pork chop capicola turkey turducken cow pork loin biltong meatball drumstick pancetta filet mignon ground round fatback. Ham hock
-        jerky short ribs brisket. Meatloaf shoulder pork chop capicola, sirloin swine pig pork. Jerky ribeye hamburger pork loin sirloin kevin bresaola boudin chuck flank. Ham hock pork belly chicken jerky rump bresaola.</p>
-    </section>
-
-    <section id="section-3">
-      <h2 id="section3">Contact</h2>
-      <p>Shank fatback pastrami short loin, turkey jowl kielbasa ribeye chicken jerky drumstick flank ham. Swine shankle pork belly kielbasa shoulder flank jowl, sirloin doner. Kevin tri-tip bresaola leberkas. Swine ball tip cow strip steak. Ham filet mignon
-        pork chop, pork fatback andouille pork loin shoulder jowl swine strip steak turducken prosciutto rump.</p>
-
-      <p>Shank fatback pastrami short loin, turkey jowl kielbasa ribeye chicken jerky drumstick flank ham. Swine shankle pork belly kielbasa shoulder flank jowl, sirloin doner. Kevin tri-tip bresaola leberkas. Swine ball tip cow strip steak. Ham filet mignon
-        pork chop, pork fatback andouille pork loin shoulder jowl swine strip steak turducken prosciutto rump.</p>
-      <p>Shank fatback pastrami short loin, turkey jowl kielbasa ribeye chicken jerky drumstick flank ham. Swine shankle pork belly kielbasa shoulder flank jowl, sirloin doner. Kevin tri-tip bresaola leberkas. Swine ball tip cow strip steak. Ham filet mignon
-        pork chop, pork fatback andouille pork loin shoulder jowl swine strip steak turducken prosciutto rump.</p>
-      <p>Tongue tri-tip pastrami, shoulder rump pork belly ground round. Ham hock chuck leberkas doner, strip steak corned beef tri-tip capicola. Rump turkey ham sausage shankle. Flank shankle pork chop ham hock. Shankle venison kielbasa, pancetta swine
-        beef ball tip t-bone bacon hamburger ground round ribeye flank. Turducken bacon bresaola, chicken kevin boudin ball tip strip steak filet mignon pork turkey shank ground round. Kielbasa fatback prosciutto pork chop, jerky ground round leberkas
-        boudin ball tip beef shankle shoulder swine brisket.</p>
-    </section>
-
-    <footer>
-
-    </footer>
-  </div>
-</div>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
-<script src="https://oblador.github.io/angular-scroll/angular-scroll.min.js"></script>
+<img src="../assets/img/Profile.JPG" alt="Profile Picture">
