--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,115 +1,65 @@
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
-body, button {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-h1 {
-  padding-top: 50px;
-}
-
-img {
-  max-width: 100%;
-}
-
-nav {
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  right: 0;
-  background: #6C648B;
-  text-transform: uppercase;
-  padding: initial;
-  font-size: initial;
-  display: inline;
-  text-align: left;
-  transition: color .5s;
-  text-transform: uppercase;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 600;
-
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    text-align: center;
+    display: inline-block;
 
 }
 
-nav li, nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  font-size: 15px;
+li {
+    float: left;
 }
 
-nav li, nav a {
-  display: inline-block;
+div {
+  position:relative;
+  }
+
+#nav {
+  position:absolute;
+  left:50%;top:0;
+  margin-left:-450px; /* negative margin equal to half the width */
+  width:1000px;
+  list-style:none;
+  margin-top: 100px;
 }
 
-nav a {
-  padding: 20px;
-  color: white;
-  text-decoration: none;
+#nav li {
+  float:left;
 }
 
-li a:hover {
-  cursor: pointer;
-  color: #6BBAA7;
+#nav a {
+  display:block;
+  text-align:center;
+  width:150px; /* fixed width */
+  text-decoration:none;
 }
 
-a.active {
-  background: #00AC7F;
-  color: #fff;
+
+li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 20px;
+
 }
 
-.wrap {
-  position: relative;
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 50px 20px;
+
+img{
+  -ms-transform: rotate(90deg); /* IE 9 */
+  -webkit-transform: rotate(90deg); /* Safari 3-8 */
+  transform: rotate(90deg);
+
+  width: 20%;
+  height: 20%;
+  margin-top: 200px;
+  margin-left: 500px;
+
 }
 
-section {
-  padding: 50px 0 30px 0;
-}
-
-footer {
+h1{
   text-align: center;
-}
-
-button {
-  font-size: 18px;
-  border: 0;
-  padding: 15px 30px;
-  background: #00AC7F;
-  color: #fff;
-  cursor: pointer;
-}
-
-h2 {
-  text-align: center;
-}
-
-#section-1 {
-  margin-bottom: 500px;
-}
-
-#section1 {
-  margin-top: 100px;
-  margin-bottom: 50px;
-}
-
-#section-2 {
-  margin-top: 100px;
-  margin-bottom: 350px;
-}
-
-#section2 {
-  margin-top: 100px;
-  margin-bottom: 50px;
-}
-
-
-#section3 {
-  margin-bottom: 50px;
 }
