--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,65 +1,63 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    text-align: center;
-    display: inline-block;
-
-}
-
-li {
-    float: left;
-}
-
-div {
-  position:relative;
-  }
-
-#nav {
-  position:absolute;
-  left:50%;top:0;
-  margin-left:-450px; /* negative margin equal to half the width */
-  width:1000px;
-  list-style:none;
-  margin-top: 100px;
-}
-
-#nav li {
-  float:left;
-}
-
-#nav a {
-  display:block;
-  text-align:center;
-  width:150px; /* fixed width */
-  text-decoration:none;
-}
-
-
-li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 20px;
-
-}
-
-
-img{
+.profile{
   -ms-transform: rotate(90deg); /* IE 9 */
   -webkit-transform: rotate(90deg); /* Safari 3-8 */
   transform: rotate(90deg);
+  display:inline-block;
+  padding: 0;
+  line-height: 80px;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  margin-top: 150px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid #BFBFBF;
+  background-color: white;
+  box-shadow: 3px 3px 3px #aaaaaa;
+  display: block;
 
-  width: 20%;
-  height: 20%;
-  margin-top: 200px;
-  margin-left: 500px;
 
 }
 
-h1{
+h1, h2, h3{
   text-align: center;
+  font-weight: normal;
+}
+
+.section1, .section3{
+  margin-top: 200px;
+  height: 500px;
+  background-color: #D5D8DC;
+}
+
+.section2, .section4{
+  margin-top: 200px;
+  height: 500px;
+  background-color: white;
+}
+
+.sectionTitle{
+  padding: 40px;
+  margin-right: 100%;
+}
+
+.sectionImg{
+  width: 50%;
+  height: 100%;
+  padding: 30px;
+  margin-left: 600px;
+}
+
+button{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+p{
+  padding: 20px;
+}
+
+#leftSection{
+  float: left;
 }
