--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,64 @@
+<img class="profile" src="../assets/img/Profile.JPG" alt="Profile Picture"><br><br>
+
 
 <h1>Frank Ngo</h1>
+<h2>Hillsboro Oregon</h2>
+<h3>Current Student at Epicodus Learning C#, .Net Framework, Javascript.</h3>
+<h3 >frankngomusic@gmail.com</h3>
 
-<ul id="nav">
-  <li><a class="active" routerLink="">Home </a></li>
-  <li><a routerLink="work">My Work</a></li>
-  <li><a routerLink="services">Services</a></li>
-  <li><a routerLink="about">About Me</a></li>
-  <li><a routerLink="contact">Contact</a></li>
-  <li><a routerLink="blog">Blog</a></li>
-</ul>
-<br><br><br>
-<hr>
+<div class="section1">
+  <div class="row">
+    <div class="col-md-6 ">
+      <img class="sectionImg"src="../assets/img/sample2.PNG" alt="sample Image 1">
+    </div>
+    <div class="col-md-6" id="leftSection">
+      <h2 class="sectionTitle">Sample Project</h2>
+      <p>Made with: Sample Sample Sample and Sample</p>
+      <p>Description Placeholder</p>
+    </div>
+  </div>
+  <button class="btn btn-primary" name="button">View On Github</button>
+</div>
+
+<div class="section2">
+  <div class="row">
+    <div class="col-md-6 ">
+      <img class="sectionImg"src="../assets/img/sample2.PNG" alt="sample Image 1">
+    </div>
+    <div class="col-md-6" id="leftSection">
+      <h2 class="sectionTitle">Sample Project</h2>
+      <p>Made with: Sample Sample Sample and Sample</p>
+      <p>Description Placeholder</p>
+    </div>
+  </div>
+  <button class="btn btn-primary" name="button">View On Github</button>
+</div>
+
+<div class="section3">
+  <div class="row">
+    <div class="col-md-6 ">
+      <img class="sectionImg"src="../assets/img/sample2.PNG" alt="sample Image 1">
+    </div>
+    <div class="col-md-6" id="leftSection">
+      <h2 class="sectionTitle">Sample Project</h2>
+      <p>Made with: Sample Sample Sample and Sample</p>
+      <p>Description Placeholder</p>
+    </div>
+  </div>
+  <button class="btn btn-primary" name="button">View On Github</button>
+</div>
+
+<div class="section4">
+  <div class="row">
+    <div class="col-md-6 ">
+      <img class="sectionImg"src="../assets/img/sample2.PNG" alt="sample Image 1">
+    </div>
+    <div class="col-md-6" id="leftSection">
+      <h2 class="sectionTitle">Sample Project</h2>
+      <p>Made with: Sample Sample Sample and Sample</p>
+      <p>Description Placeholder</p>
+    </div>
+  </div>
+  <button class="btn btn-primary" name="button">View On Github</button>
+</div>
 <router-outlet></router-outlet>
